# Cmake_learning

./: README.md
Epp02/source/: CMakeLists.txt  CmakeLists.txt  main.cpp
Epp05/: CMakeLists.txt  main.cpp
Epp05/headers/: dog.h
Epp05/sources/: operations.cpp
Epp07/: CMakeLists.txt  main.cpp
Epp07/logger/headers/: log.h
Epp07/logger/sources/: log.cpp
Epp07/sources/: dog.cpp
Epp08/: CMakeLists.txt
Epp08/sources/: main.cpp
Epp08/sources/math/: supermath.cpp
Epp08/sources/stats/: stats.cpp
Epp08/sources/stats/headers/: stats.h
Test_multiplatform/: CMakeLists.txt
Test_multiplatform/headers_linux/: printtest.hpp
Test_multiplatform/sources_linux/: main.cpp  printtest.cpp
Test_multiplatform/sources_windows/: main.cpp
